Signed-off-by: LiuHan <liuhan77@h-partners.com>

--- a/code/DocsSample/Ability/MetaCompetences/entry/src/main/module.json5
+++ b/code/DocsSample/Ability/MetaCompetences/entry/src/main/module.json5
@@ -21,6 +21,7 @@
     "description": "$string:module_desc",
     "mainElement": "EntryAbility",
     "deviceTypes": [
+      "default"
     ],
     // [EndExclude startup001]
     "appStartup": "$profile:startup_config", // 启动框架的配置文件
