--- a/code/DocsSample/Security/UniversalKeystoreKit/KeyGenerationImport/KeyImport/DevelopmentGuidelines/ImportKeyPlainText/entry/src/main/cpp/CMakeLists.txt
+++ b/code/DocsSample/Security/UniversalKeystoreKit/KeyGenerationImport/KeyImport/DevelopmentGuidelines/ImportKeyPlainText/entry/src/main/cpp/CMakeLists.txt
@@ -11,5 +11,9 @@ endif()
 include_directories(${NATIVERENDER_ROOT_PATH}
                     ${NATIVERENDER_ROOT_PATH}/include)
 
-add_library(entry SHARED napi_init.cpp)
+add_library(entry SHARED napi_init.cpp
+                         types/projects/file.h
+                         types/projects/napi_aes256.cpp
+                         types/projects/napi_rsa2048.cpp
+                         types/projects/napi_x25519.cpp)
 target_link_libraries(entry PUBLIC libace_napi.z.so libhuks_ndk.z.so)
