--- a/code/SystemFeature/TaskManagement/WorkScheduler/entry/src/main/module.json5
+++ b/code/SystemFeature/TaskManagement/WorkScheduler/entry/src/main/module.json5
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2023 Huawei Device Co., Ltd.
+ * Copyright (c) 2023-2025 Huawei Device Co., Ltd.
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
@@ -50,7 +50,7 @@
     "abilities": [
       {
         "name": "MainAbility",
-        "srcEntrance": "./ets/MainAbility/MainAbility.ets",
+        "srcEntry": "./ets/MainAbility/MainAbility.ets",
         "description": "$string:MainAbility_desc",
         "icon": "$media:icon",
         "label": "$string:MainAbility_label",
@@ -72,7 +72,7 @@
     "extensionAbilities": [
       {
         "name": "WorkSchedulerAbility",
-        "srcEntrance": "./ets/WorkSchedulerAbility/WorkSchedulerAbility.ets",
+        "srcEntry": "./ets/WorkSchedulerAbility/WorkSchedulerAbility.ets",
         "label": "$string:form_FormAbility_label",
         "description": "$string:form_FormAbility_desc",
         "type": "workScheduler",
