Modify sample bug
Signed-off-by: chennian1121 <chennian1@huawei.com>

--- a/code/DocsSample/Security/SecurityComponent/entry/src/ohosTest/module.json5
+++ b/code/DocsSample/Security/SecurityComponent/entry/src/ohosTest/module.json5
@@ -18,10 +18,11 @@
     "name": "entry_test",
     "type": "feature",
     "deviceTypes": [
-      "default",
-      "tablet"
+      "phone",
+      "tablet",
+      "2in1"
     ],
     "deliveryWithInstall": true,
-    "installationFree": false,
+    "installationFree": false
   }
 }
