--- a/code/DocsSample/Security/SecurityComponent/build-profile.json5
+++ b/code/DocsSample/Security/SecurityComponent/build-profile.json5
@@ -21,9 +21,9 @@
       {
         "name": "default",
         "signingConfig": "default",
-        "compileSdkVersion": 14,
-        "compatibleSdkVersion": 14,
-        "runtimeOS": "OpenHarmony",
+        "targetSdkVersion": "6.0.0(20)",
+        "compatibleSdkVersion": "6.0.0(20)",
+        "runtimeOS": "HarmonyOS",
         "buildOption": {
           "strictMode": {
             "caseSensitiveCheck": true,
