Signed-off-by: LiuHan <liuhan77@h-partners.com>

--- a/code/DocsSample/Ability/MetaCompetences/har1/src/main/resources/base/profile/startup_config.json
+++ b/code/DocsSample/Ability/MetaCompetences/har1/src/main/resources/base/profile/startup_config.json
@@ -2,7 +2,7 @@
   "startupTasks": [
     {
       "name": "HSP1_Task_01",
-      "srcEntry": "./ets/startup/HAR1_Task_01.ets",
+      "srcEntry": "./ets/startup/HAR1Task01.ets",
       "dependencies": [
         "HSP2_Task_01"
       ],
