--- a/code/DocsSample/Ability/MetaCompetences/entry/src/main/module.json5
+++ b/code/DocsSample/Ability/MetaCompetences/entry/src/main/module.json5
@@ -21,7 +21,8 @@
     "description": "$string:module_desc",
     "mainElement": "EntryAbility",
     "deviceTypes": [
-      "default"
+      "default",
+      "2in1"
     ],
     // [EndExclude startup001]
     "appStartup": "$profile:startup_config", // 启动框架的配置文件
