IssueNo: #I56EH7:https://gitcode.com/openharmony/applications_app_samples/issues/7036 Description: 还原console和中文资源引用问题 Sig: SIG_Sample Feature or Bugfix: Feature Binary Source: No
Signed-off-by: huyingtao <liuhan77@h-partners.com>

--- a/code/DocsSample/ArkWeb/ArkWebMenu/build-profile.json5
+++ b/code/DocsSample/ArkWeb/ArkWebMenu/build-profile.json5
@@ -29,6 +29,20 @@
             "useNormalizedOHMUrl": true
           }
         }
+      },
+      {
+        "name": "hmdefault",
+        "signingConfig": "default",
+        "compileSdkVersion": "6.0.0(20)",
+        "targetSdkVersion": "6.0.0(20)",
+        "compatibleSdkVersion": "6.0.0(20)",
+        "runtimeOS": "HarmonyOS",
+        "buildOption": {
+          "strictMode": {
+            "caseSensitiveCheck": true,
+            "useNormalizedOHMUrl": true
+          }
+        }
       }
     ],
     "buildModeSet": [
@@ -48,7 +62,8 @@
         {
           "name": "default",
           "applyToProducts": [
-            "default"
+            "default",
+            "hmdefault"
           ]
         }
       ]
