--- a/code/SystemFeature/TaskManagement/TransientTask/entry/oh-package.json5
+++ b/code/SystemFeature/TaskManagement/TransientTask/entry/oh-package.json5
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2023 Huawei Device Co., Ltd.
+ * Copyright (c) 2025 Huawei Device Co., Ltd.
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
@@ -14,11 +14,12 @@
  */
 
 {
-  "license": "ISC",
-  "devDependencies": {},
   "name": "entry",
-  "description": "example description",
-  "repository": {},
   "version": "1.0.0",
+  "description": "Please describe the basic information.",
+  "main": "",
+  "author": "",
+  "license": "",
   "dependencies": {}
 }
+
