--- a/code/SystemFeature/TaskManagement/TransientTask/AppScope/app.json5
+++ b/code/SystemFeature/TaskManagement/TransientTask/AppScope/app.json5
@@ -19,7 +19,7 @@
     "vendor": "samples",
     "versionCode": 1000000,
     "versionName": "1.0.0",
-    "icon": "$media:layered_image"
+    "icon": "$media:layered_image",
     "label": "$string:app_name",
     "distributedNotificationEnabled": true
   }
