设备环境查询 同源 Signed-off-by: <tianlong18@h-partners.com>

--- a/code/DocsSample/ArkUISample/EnvirommentProjet/build-profile.json5
+++ b/code/DocsSample/ArkUISample/EnvirommentProjet/build-profile.json5
@@ -31,12 +31,13 @@
     ],
     "buildModeSet": [
       {
-        "name": "debug",
+        "name": "debug"
       },
       {
         "name": "release"
       }
-    ]
+    ],
+    "signingConfigs": []
   },
   "modules": [
     {
