--- a/code/DocsSample/Ability/MetaCompetences/har1/src/main/module.json5
+++ b/code/DocsSample/Ability/MetaCompetences/har1/src/main/module.json5
@@ -12,7 +12,7 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-// [Start startup006]
+// [Start startup_harmodule]
 {
   "module": {
     "name": "har1",
