--- a/code/DocsSample/ArkUISample/RenderingControl/entry/build-profile.json5
+++ b/code/DocsSample/ArkUISample/RenderingControl/entry/build-profile.json5
@@ -18,7 +18,7 @@
   "buildOption": {
     "resOptions": {
       "copyCodeResource": {
-        "enable": false
+        "enable": true
       }
     }
   },
