Web Sample同源与示例标注
Signed-off-by: clear_addr <xurui115@h-partners.com>

--- a/code/DocsSample/ArkWeb/UseFrontendJSApp/build-profile.json5
+++ b/code/DocsSample/ArkWeb/UseFrontendJSApp/build-profile.json5
@@ -95,6 +95,18 @@
           ]
         }
       ]
+    },
+    {
+      "name": "entry6",
+      "srcPath": "./entry6",
+      "targets": [
+        {
+          "name": "default",
+          "applyToProducts": [
+            "default"
+          ]
+        }
+      ]
     }
   ]
 }
