--- a/code/DocsSample/ArkWeb/UseFrontendJSApp/entry6/src/main/cpp/types/libentry6/oh-package.json5
+++ b/code/DocsSample/ArkWeb/UseFrontendJSApp/entry6/src/main/cpp/types/libentry6/oh-package.json5
@@ -13,8 +13,9 @@
  * limitations under the License.
  */
 
-// [Start the_arkts_interface_is_exposed_on_the_node_api_side]
-// entry4/src/main/cpp/types/libentry4/index.d.ts
-export const nativeWebInit: (webName: string) => void;
-export const runJavaScript: (webName: string, jsCode: string) => void;
-// [End the_arkts_interface_is_exposed_on_the_node_api_side]
+{
+  "name": "libentry6.so",
+  "types": "./Index.d.ts",
+  "version": "1.0.0",
+  "description": "Please describe the basic information."
+}
