--- a/code/DocsSample/ArkWeb/UseFrontendJSApp/entry6/src/ohosTest/module.json5
+++ b/code/DocsSample/ArkWeb/UseFrontendJSApp/entry6/src/ohosTest/module.json5
@@ -13,8 +13,15 @@
  * limitations under the License.
  */
 
-// [Start the_arkts_interface_is_exposed_on_the_node_api_side]
-// entry4/src/main/cpp/types/libentry4/index.d.ts
-export const nativeWebInit: (webName: string) => void;
-export const runJavaScript: (webName: string, jsCode: string) => void;
-// [End the_arkts_interface_is_exposed_on_the_node_api_side]
+{
+  "module": {
+    "name": "entry6_test",
+    "type": "feature",
+    "deviceTypes": [
+      "default",
+      "tablet"
+    ],
+    "deliveryWithInstall": true,
+    "installationFree": false
+  }
+}
