示例工程补充system权限251106
Signed-off-by: wu-liushuan <wuliushuan.30044128@h-partners.com>
Change-Id: I3b9fef8f76c9f0b055726bd8d30e8441dd4356be

--- a/code/DocsSample/Security/RequestUserAuthorization/entry/src/main/module.json5
+++ b/code/DocsSample/Security/RequestUserAuthorization/entry/src/main/module.json5
@@ -74,6 +74,8 @@
       }
     ],
     // [EndExclude request_permission_json]
+    // 1.ohos.permission.APPROXIMATELY_LOCATION与ohos.permission.LOCATION为user_grant权限，reason和usedScene为必填字段。
+    // 2.ohos.permission.USE_BLUETOOTH为system_grant权限，reason和usedScene为选填字段。
     "requestPermissions": [
       {
         "name": "ohos.permission.APPROXIMATELY_LOCATION",
@@ -93,7 +95,10 @@
             "FormAbility"
           ],
           "when": "inuse"
-        },
+        }
+      },
+      {
+        "name": "ohos.permission.USE_BLUETOOTH"
       }
     ]
   }
