IssueNo: #7258:https://gitcode.com/openharmony/applications_app_samples/issues/7258 Description: UIAbility示例代码-替换部分中文字符 Sig: SIG_Sample Feature or Bugfix: Bugfix Binary Source: No
Signed-off-by: liuhan <liuhan77@h-partners.com>
Signed-off-by: LLDawn <liuhan77@h-partners.com>

--- a/code/DocsSample/Ability/UIAbilityLaunchType/entry/src/main/module.json5
+++ b/code/DocsSample/Ability/UIAbilityLaunchType/entry/src/main/module.json5
@@ -132,6 +132,6 @@
     ]
   }
 }
-// [Start specified]
-// [Start multiton]
-// [Start singleton]
+// [End specified]
+// [End multiton]
+// [End singleton]
