--- a/code/DocsSample/Ability/UnexpExit/entry/src/main/module.json5
+++ b/code/DocsSample/Ability/UnexpExit/entry/src/main/module.json5
@@ -46,27 +46,7 @@
         ]
       },
       {
-        "name": "ExitAbility1",
-        "srcEntry": "./ets/exitability/ExitAbility1.ets",
-        "description": "$string:EntryAbility_desc",
-        "icon": "$media:layered_image",
-        "label": "$string:EntryAbility_label",
-        "startWindowIcon": "$media:startIcon",
-        "startWindowBackground": "$color:start_window_background",
-        "exported": true,
-        "skills": [
-          {
-            "entities": [
-              "entity.system.home"
-            ],
-            "actions": [
-              "ohos.want.action.home"
-            ]
-          }
-        ]
-      },
-      {
-        "name": "ExitAbility2",
+        "name": "ExitAbility",
         "srcEntry": "./ets/exitability/ExitAbility.ets",
         "description": "$string:EntryAbility_desc",
         "icon": "$media:layered_image",
@@ -74,16 +54,6 @@
         "startWindowIcon": "$media:startIcon",
         "startWindowBackground": "$color:start_window_background",
         "exported": true,
-        "skills": [
-          {
-            "entities": [
-              "entity.system.home"
-            ],
-            "actions": [
-              "ohos.want.action.home"
-            ]
-          }
-        ]
       }
     ],
     "extensionAbilities": [
