--- a/code/DocsSample/ArkUISample/ThemeSkinning/AppScope/app.json5
+++ b/code/DocsSample/ArkUISample/ThemeSkinning/AppScope/app.json5
@@ -15,8 +15,8 @@
 
 {
   "app": {
-    "bundleName": "com.example.themeskinning",
-    "vendor": "example",
+    "bundleName": "com.samples.themeskinning",
+    "vendor": "samples",
     "versionCode": 1000000,
     "versionName": "1.0.0",
     "icon": "$media:layered_image",
