--- a/code/DocsSample/ArkUISample/ParadigmStateManagement/demo/src/ohosTest/module.json5
+++ b/code/DocsSample/ArkUISample/ParadigmStateManagement/demo/src/ohosTest/module.json5
@@ -17,7 +17,7 @@
     "name": "demo_test",
     "type": "feature",
     "deviceTypes": [
-      "phone"
+      "default"
     ],
     "deliveryWithInstall": true,
     "installationFree": false
