--- a/code/DocsSample/ArkWeb/ManageWebPageInteracts/build-profile.json5
+++ b/code/DocsSample/ArkWeb/ManageWebPageInteracts/build-profile.json5
@@ -20,10 +20,9 @@
       {
         "name": "default",
         "signingConfig": "default",
-        "compileSdkVersion": 14,
-        "compatibleSdkVersion": 14,
-        "targetSdkVersion": 14,
-        "runtimeOS": "OpenHarmony",
+        "compatibleSdkVersion": "6.0.0(20)",
+        "targetSdkVersion": "6.0.0(20)",
+        "runtimeOS": "HarmonyOS"
       }
     ],
     "buildModeSet": [
