--- a/code/SystemFeature/TaskManagement/WorkScheduler/oh-package.json5
+++ b/code/SystemFeature/TaskManagement/WorkScheduler/oh-package.json5
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2023 Huawei Device Co., Ltd.
+ * Copyright (c) 2023-2025 Huawei Device Co., Ltd.
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
@@ -14,13 +14,13 @@
  */
 
 {
-  "license": "ISC",
-  "devDependencies": {
-    "@ohos/hypium": "1.0.6"
-  },
   "name": "workSchedulerExtensionAbility",
+  "modelVersion": "6.0.0",
   "description": "example description",
-  "repository": {},
-  "version": "1.0.0",
-  "dependencies": {}
+  "dependencies": {
+  },
+  "devDependencies": {
+    "@ohos/hypium": "1.0.24",
+    "@ohos/hamock": "1.0.0"
+  }
 }
