fix failed textcompnent test cases
Signed-off-by: zhang-quanchao <zhangquanchao@huawei.com>

--- a/code/DocsSample/ArkUISample/TextComponent/entry/build-profile.json5
+++ b/code/DocsSample/ArkUISample/TextComponent/entry/build-profile.json5
@@ -22,7 +22,8 @@
       "cppFlags": "",
       "abiFilters": [
         "x86_64",
-        "arm64-v8a"
+        "arm64-v8a",
+        "armeabi-v7a"
       ]
     }
   },
