huangshiwei4@huawei.com
Signed-off-by: huangshiwei4 <huangshiwei4@huawei.com>

--- a/code/BasicFeature/DeviceManagement/Sensor/SensorCapiSamples/entry/src/main/module.json5
+++ b/code/BasicFeature/DeviceManagement/Sensor/SensorCapiSamples/entry/src/main/module.json5
@@ -20,7 +20,7 @@
     "description": "$string:module_desc",
     "mainElement": "EntryAbility",
     "deviceTypes": [
-      "phone",
+      "default",
       "tablet"
     ],
     "deliveryWithInstall": true,
@@ -59,7 +59,7 @@
             "name": "ohos.extension.backup",
             "resource": "$profile:backup_config"
           }
-        ],
+        ]
       }
     ],
     // [Start sensor_capi_permission_example]
