--- a/code/BasicFeature/DeviceManagement/Sensor/SensorCapiSamples/entry/src/ohosTest/module.json5
+++ b/code/BasicFeature/DeviceManagement/Sensor/SensorCapiSamples/entry/src/ohosTest/module.json5
@@ -18,7 +18,7 @@
     "name": "entry_test",
     "type": "feature",
     "deviceTypes": [
-      "phone",
+      "default",
       "tablet"
     ],
     "deliveryWithInstall": true,
