Signed-off-by: csc<chengshichang@huawei.com>

--- a/code/SystemFeature/TaskManagement/WorkScheduler/entry/src/ohosTest/module.json5
+++ b/code/SystemFeature/TaskManagement/WorkScheduler/entry/src/ohosTest/module.json5
@@ -26,6 +26,26 @@
     "deliveryWithInstall": true,
     "installationFree": false,
     "pages": "$profile:test_pages",
+    "requestPermissions": [
+      {
+        "name": "ohos.permission.INTERNET"
+      },
+      {
+        "name": "ohos.permission.INSTALL_BUNDLE"
+      },
+      {
+        "name": "ohos.permission.NOTIFICATION_CONTROLLER"
+      },
+      {
+        "name": "ohos.permission.SET_WIFI_INFO"
+      },
+      {
+        "name": "ohos.permission.MANAGE_WIFI_CONNECTION"
+      },
+      {
+        "name": "ohos.permission.GET_WIFI_INFO"
+      }
+    ],
     "abilities": [
       {
         "name": "TestAbility",
