huangshiwei4@huawei.com
Signed-off-by: huangshiwei4 <huangshiwei4@huawei.com>

--- a/code/BasicFeature/TaskManagement/ContinuousTask/build-profile.json5
+++ b/code/BasicFeature/TaskManagement/ContinuousTask/build-profile.json5
@@ -22,7 +22,9 @@
         "signingConfig": "default",
         "compileSdkVersion": 20,
         "compatibleSdkVersion": 20,
+        "targetSdkVersion": 20,
         "runtimeOS": "OpenHarmony"
+
       }
     ]
   },
