--- a/code/BasicFeature/TaskManagement/ContinuousTask/hvigor/hvigor-config.json5
+++ b/code/BasicFeature/TaskManagement/ContinuousTask/hvigor/hvigor-config.json5
@@ -14,8 +14,7 @@
  */
 
 {
-  "hvigorVersion": "4.1.2",
+  "modelVersion": "5.0.5",
   "dependencies": {
-    "@ohos/hvigor-ohos-plugin": "4.1.2"
   }
 }
