修改ButtonAttribute、ButtonComponent、DialogProject工程相关问题单
Signed-off-by: tianlongdevcode <tianlong18@h-partners.com>

--- a/code/DocsSample/ArkUISample/ButtonAttribute/build-profile.json5
+++ b/code/DocsSample/ArkUISample/ButtonAttribute/build-profile.json5
@@ -15,9 +15,7 @@
 
 {
   "app": {
-    "signingConfigs": [
-
-    ],
+    "signingConfigs": [],
     "products": [
       {
         "name": "default",
