IssueNo: #7377 工程修复和标签修改 Description: 工程修复和标签修改 Sig: SIG_Sample Feature or Bugfix: Feature Binary Source: No Signed-off-by: qinjianping<liuhan77@h-partners.com>

--- a/code/DocsSample/ArkUISample/UIExtensionAndAccessibility/entry/src/ohosTest/module.json5
+++ b/code/DocsSample/ArkUISample/UIExtensionAndAccessibility/entry/src/ohosTest/module.json5
@@ -18,7 +18,8 @@
     "name": "entry_test",
     "type": "feature",
     "deviceTypes": [
-      "default"
+      "default",
+      "tablet"
     ],
     "deliveryWithInstall": true,
     "installationFree": false
