--- a/code/DocsSample/ArkUISample/Navigation/entry/src/ohosTest/module.json5
+++ b/code/DocsSample/ArkUISample/Navigation/entry/src/ohosTest/module.json5
@@ -17,7 +17,8 @@
     "name": "entry_test",
     "type": "feature",
     "deviceTypes": [
-      "default"
+      "default",
+      "tablet"
     ],
     "deliveryWithInstall": true,
     "installationFree": false
