IssueNo: #7348 Description: sample仓同源doc仓：代码修改，解决问题 Sig: SIG_Sample Feature or Bugfix: Feature Binary Source: No
Signed-off-by: lvyabo <liuhan77@h-partners.com>

--- a/code/DocsSample/Ability/OrnamentIntent/feature/src/ohosTest/module.json5
+++ b/code/DocsSample/Ability/OrnamentIntent/feature/src/ohosTest/module.json5
@@ -17,7 +17,9 @@
   "module": {
     "name": "feature_test",
     "type": "feature",
-    "deviceTypes": [],
+    "deviceTypes": [
+      "default"
+    ],
     "deliveryWithInstall": true,
     "installationFree": false
   }
