--- a/code/DocsSample/Ability/OrnamentIntent/feature/src/main/module.json5
+++ b/code/DocsSample/Ability/OrnamentIntent/feature/src/main/module.json5
@@ -19,7 +19,9 @@
     "type": "feature",
     "description": "$string:module_desc",
     "mainElement": "FeatureAbility",
-    "deviceTypes": [],
+    "deviceTypes": [
+      "default"
+    ],
     "deliveryWithInstall": true,
     "installationFree": false,
     "pages": "$profile:main_pages",
