--- a/code/DocsSample/CoreFile/FileApiFileSample/entry/src/main/module.json5
+++ b/code/DocsSample/CoreFile/FileApiFileSample/entry/src/main/module.json5
@@ -20,7 +20,8 @@
     "description": "$string:module_desc",
     "mainElement": "EntryAbility",
     "deviceTypes": [
-      "phone"
+      "default",
+      "tablet"
     ],
     "deliveryWithInstall": true,
     "installationFree": false,
@@ -58,7 +59,7 @@
             "name": "ohos.extension.backup",
             "resource": "$profile:backup_config"
           }
-        ],
+        ]
       }
     ]
   }
