--- a/code/DocsSample/CoreFile/NDKAppFileSample/build-profile.json5
+++ b/code/DocsSample/CoreFile/NDKAppFileSample/build-profile.json5
@@ -15,6 +15,7 @@
 
 {
   "app": {
+    "signingConfigs": [],
     "products": [
       {
         "name": "default",
@@ -44,7 +45,7 @@
       {
         "name": "release"
       }
-    ],
+    ]
   },
   "modules": [
     {
