--- a/code/DocsSample/Notification/common_event/CommonEvent/AppScope/app.json5
+++ b/code/DocsSample/Notification/common_event/CommonEvent/AppScope/app.json5
@@ -14,7 +14,7 @@
  */
 {
   "app": {
-    "bundleName": "com.samples.subscription",
+    "bundleName": "com.samples.commonevent",
     "vendor": "example",
     "versionCode": 1000000,
     "versionName": "1.0.0",
