对Common Event的samples项目名、路径、文件名进行规范性修改及增加测试页面及UI自动化用例
Signed-off-by: tianlongdevcode <tianlong18@h-partners.com>

--- a/code/DocsSample/Basic-Services-Kit/common_event/NativeCommonEvent/entry/src/main/cpp/CMakeLists.txt
+++ b/code/DocsSample/Basic-Services-Kit/common_event/NativeCommonEvent/entry/src/main/cpp/CMakeLists.txt
@@ -12,9 +12,9 @@ include_directories(${NATIVERENDER_ROOT_PATH}
                     ${NATIVERENDER_ROOT_PATH}/include)
 
 add_library(entry SHARED
-    common_event_subscriber.cpp
-    common_event_unsubscriber.cpp
-    common_event_publisher.cpp
+    common_event_subscribe.cpp
+    common_event_unsubscribe.cpp
+    common_event_publish.cpp
     napi_init.cpp
 )
 
