--- a/code/DocsSample/Basic-Services-Kit/common_event/NativeCommonEvent/entry/src/mock/mock-config.json5
+++ b/code/DocsSample/Basic-Services-Kit/common_event/NativeCommonEvent/entry/src/mock/mock-config.json5
@@ -13,7 +13,7 @@
  * limitations under the License.
  */
 {
-  "libentry.so": {
+  "@ohos.util": {
     "source": "src/mock/Libentry.mock.ets"
   }
 }
