--- a/code/DocsSample/Basic-Services-Kit/common_event/Emitter/entry/src/main/module.json5
+++ b/code/DocsSample/Basic-Services-Kit/common_event/Emitter/entry/src/main/module.json5
@@ -19,9 +19,8 @@
     "description": "$string:module_desc",
     "mainElement": "EntryAbility",
     "deviceTypes": [
-      "phone",
-      "tablet",
-      "2in1"
+      "default",
+      "tablet"
     ],
     "deliveryWithInstall": true,
     "installationFree": false,
@@ -59,7 +58,7 @@
             "name": "ohos.extension.backup",
             "resource": "$profile:backup_config"
           }
-        ],
+        ]
       }
     ]
   }
