IssueNo: #7497：Form领域文件补充 Description: Form领域文件补充 Sig: SIG_Sample Feature or Bugfix: Feature Binary Source: No
Signed-off-by: niuyongqing <tianlong18@h-partners.com>

--- a/code/DocsSample/ApplicationModels/StageServiceWidgetCards/build-profile.json5
+++ b/code/DocsSample/ApplicationModels/StageServiceWidgetCards/build-profile.json5
@@ -19,10 +19,10 @@
       {
         "name": "default",
         "signingConfig": "default",
-        "compileSdkVersion": "6.0.0(20)",
-        "targetSdkVersion": "6.0.0(20)",
-        "compatibleSdkVersion": "6.0.0(20)",
-        "runtimeOS": "HarmonyOS"
+        "compileSdkVersion": 22,
+        "targetSdkVersion": 20,
+        "compatibleSdkVersion": 20,
+        "runtimeOS": "OpenHarmony"
       }
     ],
     "signingConfigs": [
