fix wrong project config for NewGettarget and other projects
Signed-off-by: zhang-quanchao <zhangquanchao@huawei.com>

--- a/code/DocsSample/ArkUISample/NewType/build-profile.json5
+++ b/code/DocsSample/ArkUISample/NewType/build-profile.json5
@@ -33,7 +33,7 @@
     ],
     "buildModeSet": [
       {
-        "name": "debug",
+        "name": "debug"
       },
       {
         "name": "release"
