--- a/code/DocsSample/ArkUISample/NativeDisplayBasicSample/entry/build-profile.json5
+++ b/code/DocsSample/ArkUISample/NativeDisplayBasicSample/entry/build-profile.json5
@@ -25,6 +25,7 @@
       "path": "./src/main/cpp/CMakeLists.txt",
       "arguments": "",
       "cppFlags": "",
+      "abiFilters": ["arm64-v8a","x86_64"]
     }
   },
   "buildOptionSet": [
