--- a/code/DocsSample/ArkUISample/NativeDragDrop/build-profile.json5
+++ b/code/DocsSample/ArkUISample/NativeDragDrop/build-profile.json5
@@ -20,7 +20,7 @@
       {
         "name": "default",
         "signingConfig": "default",
-        "targetSdkVersion": "20",
+        "targetSdkVersion": 20,
         "compileSdkVersion": 20,
         "compatibleSdkVersion": 20,
         "runtimeOS": "OpenHarmony",
