--- a/code/DocsSample/ArkUISample/GestureBinding/entry/src/main/module.json5
+++ b/code/DocsSample/ArkUISample/GestureBinding/entry/src/main/module.json5
@@ -19,7 +19,7 @@
     "description": "$string:module_desc",
     "mainElement": "EntryAbility",
     "deviceTypes": [
-      "phone"
+      "default"
     ],
     "deliveryWithInstall": true,
     "installationFree": false,
@@ -57,7 +57,7 @@
             "name": "ohos.extension.backup",
             "resource": "$profile:backup_config"
           }
-        ],
+        ]
       }
     ]
   }
