修改 OpenHarmony. 测试自动化用例 Signed-off-by: <tianlong18@h-partners.com>

--- a/code/DocsSample/ArkUISample/ShapeDrawing/build-profile.json5
+++ b/code/DocsSample/ArkUISample/ShapeDrawing/build-profile.json5
@@ -33,12 +33,13 @@
     ],
     "buildModeSet": [
       {
-        "name": "debug",
+        "name": "debug"
       },
       {
         "name": "release"
       }
-    ]
+    ],
+    "signingConfigs": []
   },
   "modules": [
     {
