--- a/code/DocsSample/ArkUISample/StateMgmtV2MVVM/entry/src/ohosTest/module.json5
+++ b/code/DocsSample/ArkUISample/StateMgmtV2MVVM/entry/src/ohosTest/module.json5
@@ -19,8 +19,7 @@
     "name": "entry_test",
     "type": "feature",
     "deviceTypes": [
-      "default",
-      "tablet"
+      "default"
     ],
     "deliveryWithInstall": true,
     "installationFree": false
