IssueNo: #7508:https://gitcode.com/openharmony/applications_app_samples/issues/7508 Description: 检查sample仓arkui部分改为Openharmony并跑测修改 Sig: SIG_Sample Feature or Bugfix: Bugfix Binary Source: No
Signed-off-by: liuhan <liuhan77@h-partners.com>
Signed-off-by: LLDawn <liuhan77@h-partners.com>

--- a/code/DocsSample/ArkUISample/UIContext/entry/src/ohosTest/module.json5
+++ b/code/DocsSample/ArkUISample/UIContext/entry/src/ohosTest/module.json5
@@ -18,8 +18,7 @@
     "name": "entry_test",
     "type": "feature",
     "deviceTypes": [
-      "default",
-      "phone"
+      "default"
     ],
     "deliveryWithInstall": true,
     "installationFree": false
