--- a/code/DocsSample/ArkUISample/NativeType/CustomContainerSample/build-profile.json5
+++ b/code/DocsSample/ArkUISample/NativeType/CustomContainerSample/build-profile.json5
@@ -33,12 +33,13 @@
     ],
     "buildModeSet": [
       {
-        "name": "debug",
+        "name": "debug"
       },
       {
         "name": "release"
       }
-    ]
+    ],
+    "signingConfigs": []
   },
   "modules": [
     {
