--- a/code/DocsSample/ArkUISample/UIContext/entry/src/main/module.json5
+++ b/code/DocsSample/ArkUISample/UIContext/entry/src/main/module.json5
@@ -20,8 +20,7 @@
     "description": "$string:module_desc",
     "mainElement": "EntryAbility",
     "deviceTypes": [
-      "default",
-      "phone"
+      "default"
     ],
     "deliveryWithInstall": true,
     "installationFree": false,
@@ -59,7 +58,7 @@
             "name": "ohos.extension.backup",
             "resource": "$profile:backup_config"
           }
-        ],
+        ]
       }
     ]
   }
