修改工程运行问题
Signed-off-by: tianlongdevcode <tianlong18@h-partners.com>

--- a/code/DocsSample/ArkUISample/BuilderNode/entry/src/ohosTest/module.json5
+++ b/code/DocsSample/ArkUISample/BuilderNode/entry/src/ohosTest/module.json5
@@ -23,7 +23,7 @@
       }
     ],
     "deviceTypes": [
-      "phone"
+      "default"
     ],
     "deliveryWithInstall": true,
     "installationFree": false
