--- a/code/DocsSample/ArkUISample/ButtonList/build-profile.json5
+++ b/code/DocsSample/ArkUISample/ButtonList/build-profile.json5
@@ -20,20 +20,16 @@
       {
         "name": "default",
         "signingConfig": "default",
-        "compileSdkVersion": "6.0.0(20)",
-        "compatibleSdkVersion": "6.0.0(20)",
-        "runtimeOS": "HarmonyOS",
+        "targetSdkVersion": 20,
+        "compileSdkVersion": 20,
+        "compatibleSdkVersion": 20,
+        "runtimeOS": "OpenHarmony",
         "buildOption": {
-          "externalNativeOptions": {
-            "path": "./src/main/cpp/CMakeLists.txt",
-            "arguments": "",
-            "cppFlags": "",
-            "abiFilters": [
-              "arm64-v8a",
-              "x86_64"
-            ]
+          "strictMode": {
+            "caseSensitiveCheck": true,
+            "useNormalizedOHMUrl": true
           }
-        },
+        }
       }
     ],
     "buildModeSet": [
