--- a/code/DocsSample/ArkUISample/ChooseComponent/entry/src/main/module.json5
+++ b/code/DocsSample/ArkUISample/ChooseComponent/entry/src/main/module.json5
@@ -20,6 +20,7 @@
     "description": "$string:module_desc",
     "mainElement": "EntryAbility",
     "deviceTypes": [
+      "tablet",
       "default"
     ],
     "deliveryWithInstall": true,
