--- a/code/DocsSample/ArkUISample/ClipShape/build-profile.json5
+++ b/code/DocsSample/ArkUISample/ClipShape/build-profile.json5
@@ -14,13 +14,15 @@
  */
 {
   "app": {
+    "signingConfigs": [],
     "products": [
       {
         "name": "default",
         "signingConfig": "default",
-        "targetSdkVersion": "6.0.0(20)",
-        "compatibleSdkVersion": "6.0.0(20)",
-        "runtimeOS": "HarmonyOS",
+        "targetSdkVersion": 20,
+        "compileSdkVersion": 20,
+        "compatibleSdkVersion": 20,
+        "runtimeOS": "OpenHarmony",
         "buildOption": {
           "strictMode": {
             "caseSensitiveCheck": true,
