签名验签：codecheck修改
Signed-off-by: yang-junfeng0621 <yangjunfeng19@huawei.com>

--- a/code/DocsSample/Security/UniversalKeystoreKit/KeyUsage/SigningVerification/entry/src/main/cpp/CMakeLists.txt
+++ b/code/DocsSample/Security/UniversalKeystoreKit/KeyUsage/SigningVerification/entry/src/main/cpp/CMakeLists.txt
@@ -18,6 +18,7 @@ add_library(entry SHARED
     sm2_sm3_sign_verify.cpp
     sm2_nodigest_sign_verify.cpp
     rsa_sha256_pss_sign_verify.cpp
-    rsa_sha256_pkcs1_v1_5_sign_verify.cpp)
+    rsa_sha256_pkcs1_v1_5_sign_verify.cpp
+    sign_verify.h)
 
 target_link_libraries(entry PUBLIC libace_napi.z.so libhuks_ndk.z.so)
