huangshiwei4@huawei.com
Signed-off-by: huangshiwei4 <huangshiwei4@huawei.com>

--- a/code/DocsSample/ArkUISample/MakeObserved/entry/src/main/module.json5
+++ b/code/DocsSample/ArkUISample/MakeObserved/entry/src/main/module.json5
@@ -19,12 +19,8 @@
     "description": "$string:module_desc",
     "mainElement": "EntryAbility",
     "deviceTypes": [
-      "phone",
-      "tablet",
-      "2in1",
-      "car",
-      "wearable",
-      "tv"
+      "default",
+      "tablet"
     ],
     "deliveryWithInstall": true,
     "installationFree": false,
@@ -62,7 +58,7 @@
             "name": "ohos.extension.backup",
             "resource": "$profile:backup_config"
           }
-        ],
+        ]
       }
     ]
   }
