--- a/code/DocsSample/ArkUISample/NativeType/native_type_sample/build-profile.json5
+++ b/code/DocsSample/ArkUISample/NativeType/native_type_sample/build-profile.json5
@@ -19,8 +19,9 @@
       {
         "name": "default",
         "signingConfig": "default",
-        "compileSdkVersion": 20,
-        "compatibleSdkVersion": 20,
+        "compileSdkVersion": 22,
+        "compatibleSdkVersion": 22,
+        "targetSdkVersion": 22,
         "runtimeOS": "OpenHarmony",
         "buildOption": {
           "strictMode": {
@@ -28,7 +29,6 @@
             "useNormalizedOHMUrl": true
           }
         },
-        "targetSdkVersion": 20
       }
     ],
     "buildModeSet": [
