--- a/code/DocsSample/Form/AddFormFromApp/entry/src/main/module.json5
+++ b/code/DocsSample/Form/AddFormFromApp/entry/src/main/module.json5
@@ -20,10 +20,8 @@
     "description": "$string:module_desc",
     "mainElement": "EntryAbility",
     "deviceTypes": [
-      "phone", 
-      "tablet",
-      "2in1",
-      "wearable"
+      "default",
+      "tablet"
     ],
     "deliveryWithInstall": true,
     "installationFree": false,
