--- a/code/DocsSample/Form/AddFormFromApp/entry/src/ohosTest/module.json5
+++ b/code/DocsSample/Form/AddFormFromApp/entry/src/ohosTest/module.json5
@@ -18,10 +18,8 @@
     "name": "entry_test",
     "type": "feature",
     "deviceTypes": [
-      "phone",
-      "tablet",
-      "2in1",
-      "wearable"
+      "default",
+      "tablet"
     ],
     "deliveryWithInstall": true,
     "installationFree": false
