--- a/code/DocsSample/Notification/ThirdpartyWerableDemo/oh-package.json5
+++ b/code/DocsSample/Notification/ThirdpartyWerableDemo/oh-package.json5
@@ -12,14 +12,13 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-
 {
-  "modelVersion": "5.1.0",
+  "modelVersion": "5.0.5",
   "description": "Please describe the basic information.",
   "dependencies": {
   },
   "devDependencies": {
-    "@ohos/hypium": "1.0.21",
-    "@ohos/hamock": "1.0.1-rc2"
+    "@ohos/hypium": "1.0.24",
+    "@ohos/hamock": "1.0.0"
   }
 }
